// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeTranslationForProject > should be idempotent - no changes when running again without modifications 1`] = `
[
  "en (source) hash tracking summary: 0 processed, 4 skipped (4 total)",
  "✓ Successfully tracked en source language hashes (no directory created)",
  "de translation summary: 0 processed, 3 skipped (3 total)",
  "✓ Successfully created de translation with content processing",
  "es translation summary: 0 processed, 3 skipped (3 total)",
  "✓ Successfully created es translation with content processing",
  "Overall summary: 0 files processed, 10 files skipped across 3 languages (10 total operations)",
  "Translations created successfully in: /private<temp-dir>/fern/translations",
  "You can now modify the content in each language directory:",
  "  - de: /private<temp-dir>/fern/translations/de",
  "  - es: /private<temp-dir>/fern/translations/es",
  "Source language (en) values are tracked as hashes in translations/hashes",
  "Language-specific docs configurations created with modified instance URLs:",
  "  - de/docs.yml: URLs modified to include de prefix",
  "  - es/docs.yml: URLs modified to include es prefix",
]
`;

exports[`writeTranslationForProject > should correctly modify URLs with existing paths 1`] = `
{
  "docConfigs": {
    "de": {
      "instances": [
        {
          "custom-domain": "custom.example.com/api",
          "url": "https://example-de.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "navigation": [
        {
          "page": "Welcome",
          "path": "./welcome.md",
        },
      ],
      "title": "Path URL Test Documentation",
    },
    "es": {
      "instances": [
        {
          "custom-domain": "custom.example.com/api",
          "url": "https://example-es.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "navigation": [
        {
          "page": "Welcome",
          "path": "./welcome.md",
        },
      ],
      "title": "Path URL Test Documentation",
    },
  },
  "structure": {
    "de": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "custom-domain": "custom.example.com/api",
                "url": "https://example-de.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "navigation": [
              {
                "page": "Welcome",
                "path": "./welcome.md",
              },
            ],
            "title": "Path URL Test Documentation",
          },
          "type": "file",
        },
        "welcome.md": {
          "content": "# Welcome

This is a test fixture file.",
          "type": "file",
        },
      },
      "type": "directory",
    },
    "es": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "custom-domain": "custom.example.com/api",
                "url": "https://example-es.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "navigation": [
              {
                "page": "Welcome",
                "path": "./welcome.md",
              },
            ],
            "title": "Path URL Test Documentation",
          },
          "type": "file",
        },
        "welcome.md": {
          "content": "# Welcome

This is a test fixture file.",
          "type": "file",
        },
      },
      "type": "directory",
    },
    "hashes": {
      "content": "{
  "_comment": "This file is auto-generated by Fern to track source file changes for translation purposes. Do not edit manually - it will be overwritten on the next translation update.",
  "docs.yml": "c2e6cbbc7b2ff3b8cc3be45af60eabf3b84caf11912324c95fead99ced64ade8",
  "welcome.md": "5c48fb45d1f4ea4be56dd97cd0e4070b777c65ff6c46db35f0c857fa43d4bee1"
}",
      "type": "file",
    },
  },
  "translationsExists": true,
}
`;

exports[`writeTranslationForProject > should create language-specific docs.yml configs with modified URLs 1`] = `
{
  "docConfigs": {
    "de": {
      "instances": [
        {
          "url": "https://test-de.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
    "es": {
      "instances": [
        {
          "url": "https://test-es.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
  },
  "structure": {
    "de": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-de.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[DE] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[DE] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[DE] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[DE] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "es": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-es.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[ES] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[ES] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[ES] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[ES] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "hashes": {
      "content": "{
  "_comment": "This file is auto-generated by Fern to track source file changes for translation purposes. Do not edit manually - it will be overwritten on the next translation update.",
  "docs.yml": "722ebdf7bc82bd3ac59b0ac6ae3956ebdf4b2f80476c9a1916259978b2dd47c7",
  "nav.yml": "c286805274b2e3b66b8b19b33e545d10b8ed850d527aaf8b3db1c60aae4a8be0",
  "pages/api/overview.mdx": "a5c57eb7e3f766d98b25288cbcffec59ffaf588c7c3ba0d454462a05ad17de14",
  "pages/getting-started.mdx": "5c05c4fc69ecb5d0cefd8fae869f0110502465ccfef9bf32611d7116923269e0"
}",
      "type": "file",
    },
  },
  "translationsExists": true,
}
`;

exports[`writeTranslationForProject > should create translations folder with correct structure 1`] = `
{
  "docConfigs": {
    "de": {
      "instances": [
        {
          "url": "https://test-de.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
    "es": {
      "instances": [
        {
          "url": "https://test-es.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
  },
  "structure": {
    "de": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-de.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[DE] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[DE] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[DE] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[DE] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "es": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-es.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[ES] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[ES] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[ES] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[ES] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "hashes": {
      "content": "{
  "_comment": "This file is auto-generated by Fern to track source file changes for translation purposes. Do not edit manually - it will be overwritten on the next translation update.",
  "docs.yml": "722ebdf7bc82bd3ac59b0ac6ae3956ebdf4b2f80476c9a1916259978b2dd47c7",
  "nav.yml": "c286805274b2e3b66b8b19b33e545d10b8ed850d527aaf8b3db1c60aae4a8be0",
  "pages/api/overview.mdx": "a5c57eb7e3f766d98b25288cbcffec59ffaf588c7c3ba0d454462a05ad17de14",
  "pages/getting-started.mdx": "5c05c4fc69ecb5d0cefd8fae869f0110502465ccfef9bf32611d7116923269e0"
}",
      "type": "file",
    },
  },
  "translationsExists": true,
}
`;

exports[`writeTranslationForProject > should create translations folder with individual language directories 1`] = `
{
  "docConfigs": {
    "de": {
      "instances": [
        {
          "url": "https://test-de.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
    "es": {
      "instances": [
        {
          "url": "https://test-es.docs.buildwithfern.com",
        },
      ],
      "languages": [
        "en",
        "de",
        "es",
      ],
      "products": [
        {
          "display-name": "Home",
          "path": "./nav.yml",
        },
      ],
      "title": "Test Documentation",
    },
  },
  "structure": {
    "de": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-de.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[DE] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[DE] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[DE] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[DE] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "es": {
      "contents": {
        "docs.yml": {
          "content": {
            "instances": [
              {
                "url": "https://test-es.docs.buildwithfern.com",
              },
            ],
            "languages": [
              "en",
              "de",
              "es",
            ],
            "products": [
              {
                "display-name": "Home",
                "path": "./nav.yml",
              },
            ],
            "title": "Test Documentation",
          },
          "type": "file",
        },
        "nav.yml": {
          "content": {
            "navigation": [
              {
                "layout": [
                  {
                    "page": "[ES] Getting Started",
                    "path": "./pages/getting-started.mdx",
                  },
                  {
                    "contents": [
                      {
                        "page": "[ES] Overview",
                        "path": "./pages/api/overview.mdx",
                      },
                    ],
                    "section": "[ES] API Guide",
                  },
                ],
                "tab": "docs",
              },
            ],
            "tabs": {
              "docs": {
                "display-name": "[ES] Documentation",
                "icon": "fa-solid fa-book",
              },
            },
          },
          "type": "file",
        },
      },
      "type": "directory",
    },
    "hashes": {
      "content": "{
  "_comment": "This file is auto-generated by Fern to track source file changes for translation purposes. Do not edit manually - it will be overwritten on the next translation update.",
  "docs.yml": "722ebdf7bc82bd3ac59b0ac6ae3956ebdf4b2f80476c9a1916259978b2dd47c7",
  "nav.yml": "c286805274b2e3b66b8b19b33e545d10b8ed850d527aaf8b3db1c60aae4a8be0",
  "pages/api/overview.mdx": "a5c57eb7e3f766d98b25288cbcffec59ffaf588c7c3ba0d454462a05ad17de14",
  "pages/getting-started.mdx": "5c05c4fc69ecb5d0cefd8fae869f0110502465ccfef9bf32611d7116923269e0"
}",
      "type": "file",
    },
  },
  "translationsExists": true,
}
`;

exports[`writeTranslationForProject > should handle project with no languages configured 1`] = `
{
  "translationsExists": false,
}
`;
